quiz-ui/yaml/quiz-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quiz-app
  namespace: virtu-project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quiz-app
  template:
    metadata:
      labels:
        app: quiz-app
    spec:
      containers:
        - image: damienesiee/quiz-app:latest
          imagePullPolicy: Always
          name: quiz-app
      restartPolicy: Always
