quiz-ui/yaml/quiz-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: quiz-app
  namespace: virtu-project
spec:
  ports:
    - nodePort: 31280
      port: 8080
      protocol: TCP
  selector:
    app: quiz-app
  type: NodePort
